--- a/order_conf.html
+++ b/order_conf.html
@@ -19,7 +19,7 @@
                   <tr>
                     <td
                       style="
-                        background: url(logos/fondo_2.png);
+                        background: url(logos/Grupo\ 13@2x.png);
                         background-position: 45%;
                         background-repeat: no-repeat;
                         background-size: cover;
@@ -327,7 +327,7 @@ opacity: 1;
                                     </td>
                                    </tr>
                                    <th colspan="5"
-                                   style="text-align: center">
+                                   style="text-align: center; line-height: 0px;">
                                           
                                     <strong
                                     style="
@@ -368,7 +368,7 @@ opacity: 1;
                           </tbody>
                         </table>
                         <div
-                          style=" margin-top: 30px; background: #FAFDFF 0% 0% no-repeat padding-box;border: 1px solid #FFFFFF;"
+                          style=" margin-top: 10px; background: #FAFDFF 0% 0% no-repeat padding-box;border: 1px solid #FFFFFF;"
                         >
                           <table
                             style="width: 100%; display: flex;
@@ -563,7 +563,6 @@ opacity: 1;">
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td></td>
                                       </tr>
                                     </tbody>
                                   </table>
@@ -575,12 +574,15 @@ opacity: 1;">
                             </tbody>
                           </table>
                           <div
-                            style="border: 1px solid #28AAE4;
+                            style="border: 1px solid #B3B3B4;
                             opacity: 1;
                               width: 100%;
 height: 0px;
                             "
                           ></div>
+                          <td style="padding: 7px 0" width="10">
+                            &nbsp; 
+                          </td>
                           <table style="width: 100%; background: #FAFDFF 0% 0% no-repeat padding-box;
                           border: 1px solid #FFFFFF;">
                             <tbody>
@@ -910,6 +912,7 @@ font-weight: normal;
 letter-spacing: 0px;
 color: #111212;
 opacity: 1;
+line-height: 1px;
                       "
                     ><p>
                         <span>
